Partial corrections from Spring 2016

--- a/ParallelsInGeometry/1166-SupplementalProblems.tex
+++ b/ParallelsInGeometry/1166-SupplementalProblems.tex
@@ -1,9 +1,9 @@
 \newpage
 
-\section{Final Exam Review (draft, 4/28/15)}
+\section{Math 1166: Final Exam Review, 2016}
 
 Note:  The final exam is cumulative, so be sure to include the \textbf{previous midterm review documents} as part of your review.  
-Since the second midterm, we have covered Sections 5.3, 5.4, 6.1 and 6.2 from your notes as well as Activities A.38--A.48 and A.53 (a handout).  Below is a summary of that content.  
+Since the second midterm, we have covered Sections 5.3, 5.4 (except 5.4.3 and 5.4.4), 6.1 and 6.2 from your notes as well as Activities A.36 -- A.48, except A.46.  Below is a summary of that content.  
 
 % A.40.Reading Information from a Graph
 % A.41. Parametric Equations
@@ -18,8 +18,9 @@ Since the second midterm, we have covered Sections 5.3, 5.4, 6.1 and 6.2 from yo
 
 \subsection*{Coordinate Geometry}
 \begin{itemize}\itemsep-3pt
-\item Find an equation of a line through a given point parallel to a given line.
-\item Find an equation of a line through a given point perpendicular to a given line.
+\item What are the benefits of the standard form, the point-slope form, and the slope-intercept form of a line?  
+\item Find an equation of a line through a given point parallel to a given line.  (Try this in standard form.)  
+\item Find an equation of a line through a given point perpendicular to a given line.  (Try this in standard form.) 
 \item Given two lines, two circles, or a line and a circle, find their intersection(s) if any.  Describe what is happening geometrically when the algebra yields no solutions, exactly one solution, exactly two solution(s) or infinitely many solutions. 
 \item Given an equation of a circle or a parabola, complete the square to find the center of the circle or the vertex of the parabola.  
 \item What are constructible numbers?  What are some numbers that are not constructible? 
@@ -51,11 +52,9 @@ Since the second midterm, we have covered Sections 5.3, 5.4, 6.1 and 6.2 from yo
 The problems below target content since the second midterm exam. 
 
 \begin{prob} 
-Consider a nonzero vector defined by the ordered pair $(a,b)$. If $\|
-(a,b)\|$ is the magnitude of this vector, \textbf{use algebra} to
-explain why
+Consider a nonzero vector defined by the ordered pair $(a,b)$. Let $m$ be the magnitude (length) of this vector, \textbf{use algebra} to explain why
 \[
-\frac{(a,b)}{\|(a,b)\|}
+\frac{(a,b)}{m}
 \]
 is a new vector whose magnitude is $1$ and whose direction is the same
 as $(a,b)$.
@@ -190,8 +189,6 @@ Recall the method in Euclidean geometry of constructing an equilateral triangle 
 A fundamental feature of the basic rigid motions in Euclidean geometry is that they preserve distance and angle.  In city geometry, some basic rigid motions preserve both distance and angle and others fail for various reasons.  Explain.  (Hint:  Some but not all rotations preserve both distance and angle.)  
 \end{prob}
 
-\newpage
-
 \begin{prob} 
 Clearly identify which of the following numbers are constructible and
 which numbers are not constructible.
@@ -263,9 +260,16 @@ Volume of a cylinder.
 
 
 \begin{prob}
-Standard televisions usually have an aspect ratio (width:length) of 4:3.  Wide-screen televisions have an aspect ratio of 16:9.  When Brad's first wide-screen television was a 36 inch (diagonal) model.  Although the new television was clearly wider than the 27 inch (diagonal) standard television it replaced, he was surprised that it did not seem taller than the old television.  Which television was actually taller?  And by how much?  
+Standard televisions usually have an aspect ratio (width:length) of 4:3.  Wide-screen televisions have an aspect ratio of 16:9.  Brad's first wide-screen television was a 36 inch (diagonal) model.  Although the new television was clearly wider than the 27 inch (diagonal) standard television it replaced, he was surprised that it did not seem taller than the old television.  Which television was actually taller?  And by how much?  Explain your reasoning.   
 \end{prob}
 
+\begin{prob}
+Given an equation of a line in standard form, $ax+by=c$:  
+\begin{enumerate}
+\item Find an efficient way to write down an equation of a perpendicular line through the point $(p,q)$.  
+\item Explain why efficient the method works. 
+\end{enumerate}
+\end{prob}
 
 %\subsection*{Questions to be added}
 %\begin{enumerate}
