--- a/ParallelsInGeometry/ParallelsInGeometrySupplements.tex
+++ b/ParallelsInGeometry/ParallelsInGeometrySupplements.tex
@@ -76,6 +76,9 @@
 %\input{../chapters/appendix/ruleTheDay}
 
 % Figures for Turn Up the Volume!  
+
+\input{../chapters/appendix/linesInTriangles}
+
 \newpage
 
 $$\includegraphics[angle=90,scale=1.2]{../graphics/rightPyramid}$$
@@ -89,6 +92,6 @@ $$\includegraphics[scale=1.2]{../graphics/sphereVolume}$$
 \input{1166-midterm2}
 %
 \input{1166-SupplementalProblems}
-
+\input{4407-exam}
 
 \end{document}
