--- a/ParallelsInGeometry/1166-midterm.tex
+++ b/ParallelsInGeometry/1166-midterm.tex
@@ -1,20 +1,32 @@
 \newpage
 
 \section{Midterm 1 Review}
-Midterm Exam 1 will cover Chapters 1 -- 3 (except section 1.2 and the angle trisection part of 3.1) and activities A.1 -- A.18 (except A.14).  We did not complete all of these activities in class so you will need to fill in some gaps.  In particular, we did not do A.15 at all and we did only a few problems from A.17.  
+Midterm Exam 1 will cover Chapters 1 -- 3 (except section 1.2 and the angle trisection part of 3.1) and activities A.1 -- A.18.  We did not complete all of these activities in class so you will need to fill in some gaps.  
 \subsection{Review Ideas}
 
 \begin{itemize}\itemsep0em
-\item Be able to state definitions of commonly used terms.
+\item Be able to state definitions of commonly used terms, such as 
+\begin{itemize}
+\item Perpendicular line, parallel line, line segment, ray, angle, circle
+\item Concurrent, collinear
+\item Equilateral, equiangular, and regular polygons
+\item Acute, obtuse, and right angles and triangles; isosceles and scalene triangles
+\item Straight, complementary, and supplementary angles
+\item Trapezoid (inclusive and exclusive), parallelogram, rhombus, rectangle, square, kite
+\item Median, perpendicular bisector, angle bisector, altitude
+\item Centroid, circumcenter, incenter, orthocenter
+\item Chord, arc, arc measure, central angle, inscribed angle, tangent
+\end{itemize}
 \item Be able to perform standard constructions and explain why they work. 
+\item Be able to draw (careful) figures satisfying particular conditions.  
 \item Be able to explain key concepts such as area and angle.   
 \item Be able to state precisely the triangle congruence criteria. 
 \item Know the properties of various special quadrilaterals and be able to prove them.  
 \item Know the various centers of a triangle, how to construct them, and whether they can lie outside the triangle.  
 \item Be able to state key theorems and prove them in at least two (2) ways, especially:  
 \begin{itemize}
-\item Isosceles triangle theorem
-\item Pythagorean theorem
+\item Isosceles triangle theorem and its converse
+\item Pythagorean theorem and its converse
 \item The angle sum of a triangle 
 \end{itemize}
 \end{itemize}
@@ -65,7 +77,7 @@ Given a circle, give a construction that finds its center.
 \end{prob}
 
 \begin{prob}
-State and prove a condition on any quadrilateral that is inscribed in a circle.  
+State and prove a condition about the angles of any quadrilateral that is inscribed in a circle.  
 \end{prob}
 
 \begin{prob}
@@ -85,8 +97,18 @@ Prove:  If opposite sides of a quadrilateral are congruent, then it is a paralle
 \end{prob}
 
 \begin{prob}
+Claim:  The diagonals of a rhombus are perpendicular. 
+\begin{enumerate}
+\item Prove the claim. 
+\item State the converse of the claim. 
+\item Is the converse true?  If so, prove it.  If not, ``salvage it'' to make a true statement, and prove it.  
+\end{enumerate}
+\end{prob}
+
+
+\begin{prob}
 Draw an arbitrary convex quadrilateral.  Form a second quadrilateral by connecting the midpoints of the sides 
-of the first quadrilateral.  Make a conjecture about the second quadrilateral and prove it.  
+of the first quadrilateral.  You will find that the second quadrilateral is a special quadrilateral.  Make a conjecture about the second quadrilateral and prove it.  
 \end{prob}
 
 \begin{prob}
@@ -99,5 +121,17 @@ Explain how the picture ``proves'' the following statements:
 \begin{enumerate}
 \item The interior angles of a triangle sum to $180^\circ$. 
 \item The area of a triangle is given by $bh/2$. 
+\end{enumerate}
+\end{prob}
+
+\begin{prob}
+The figure below illustrates a construction given an angle $\theta$ and a segment $\overline{AB}$.  Line $\overleftrightarrow{DE}$ is the perpendicular bisector of $\overline{AB}$, and $\overleftrightarrow{BE}$ is perpendicular to $\overrightarrow{BC}$, as marked.  
+\[
+\includegraphics[scale=0.5]{../graphics/trickyConstruction}
+\]
+\begin{enumerate}
+%\item Mark the diagram and state what must be true about the construction so that $\angle\alpha=\angle\beta$. 
+\item Prove that $\angle\theta=\angle\beta$. 
+\item What will happen to $\angle\beta$ if point $X$ is moved over to point $Y$?
 \end{enumerate}
 \end{prob}
