--- a/ParallelsInGeometry/1166-midterm2.tex
+++ b/ParallelsInGeometry/1166-midterm2.tex
@@ -1,11 +1,11 @@
 \newpage
 
-\section{Midterm 2 Review (final version)}
+\section{Midterm 2 Review}
 
-Midterm 2 will cover Chapter 4, Sections 5.1 and 5.2, Activities A.21--A.36, and the beginning of A.39. Here are some specific reminders:  
+Midterm 2 will cover Chapter 4, Sections 5.1 and 5.2, Activities A.19--A.35, and A.38. Here are some specific reminders:  
 \begin{itemize}\itemsep-3pt
 \item Know the distinction between synthetic and analytic geometry.
-\item Know the basic rigid motions, what is required to specify them, and their definitions. 
+\item Know the basic rigid motions, what is required to specify them, and their properties. 
 \item Know what it means to say that transformations of the plane are functions.  
 \item Know how to define congruence in terms of basic rigid motions. 
 \item Know how to define similarity in terms of dilations and basic rigid motions.  
@@ -14,27 +14,42 @@ Midterm 2 will cover Chapter 4, Sections 5.1 and 5.2, Activities A.21--A.36, and
 \item Know the focus and directrix definition of parabola and be able to use it in both synthetic and analytic geometry.
 \item Know the definition of circle and be able to use it in both synthetic and analytic geometry.
 \item Be aware of assumptions underlying Euclidean geometry and how those assumptions can be different in other geometries (such as spherical geometry).  
-\item Use similarity to find missing lengths by reasoning from the scale factor or from within-figure comparisons.  
+\item Use similarity to find missing lengths by reasoning from the scale factor or from within-figure comparisons.   
+\item Understand right-triangle trigonometry as similarity, and use trigonometry to solve problems.  (See activity A.27 for a review.)
 \item Reason about length, area, and volume in similarity situations.  How are rep-tiles related to this question?  
 \item Use shearing and Cavalieri's principle to reason about area and volume.  
 \item If you know the area of a rectangle, what can you say about its perimeter?  What about more general figures?  
 \item If you know the perimeter of a rectangle, what can you say about its area?  What about more general figures? 
-\item In coordinate geometry, what is a point?
-\item In coordinate geometry, what is a line? 
+\item In coordinate geometry, what is a point?  What is a line?  
 \item Know how to find an equation of the line containing two given points.  
-\item Know how to derive the distance formula quickly. 
-\item Know how to derive the midpoint formula quickly.  
+\item Know how to derive and explain the distance and midpoint formulas. 
 \end{itemize}
 
 
-
 \subsection{Midterm 2 Review Problems}
+
+\begin{prob}
+Ethan stands $120$ feet from the trunk of a tree (along flat ground).  He measures that his line of sight to the top of the tree is at an angle of $53^\circ$ from horizontal.  How tall is the tree?  Explain your reasoning.  
+\end{prob}
 
 \begin{prob}
 During a solar eclipse we see that the apparent diameter of the Sun and Moon are nearly equal. If the Moon is around 240,000 miles from Earth, the Moon's diameter is about 2000 miles, and the Sun's diameter is about 865,000 miles how far is the Sun from the Earth?
 \begin{enumerate}
 \item Draw a relevant (and helpful) picture showing the important points of this problem.
 \item Write an expression that gives the solution to this problem---show all work.
+\end{enumerate}
+\end{prob}
+
+\begin{prob}
+David proudly owns a 42 inch (measured diagonally) flat screen
+  TV. Michael proudly owns a 13 inch (measured diagonally) flat screen
+  TV. Dave sits comfortably with his dog Fritz at a distance of 10
+  feet. How close must Michael sit from his TV to have the ``same''
+  viewing experience?  Explain your reasoning.
+\begin{enumerate}
+\item Draw a relevant (and helpful) picture showing the important
+  points of this problem.
+\item Solve this problem, and be sure to explain your reasoning.
 \end{enumerate}
 \end{prob}
 
@@ -99,9 +114,9 @@ Prove that the angle sum of a triangle is $180^\circ$.
 %Explain how the formula for the volume of a sphere follows from the formula for the volume of a cone and Cavalieri's Principle.
 %\end{prob}
 %
-%\begin{prob}
-%Give an informal derivation of the relationship between the circumference and area of a circle. 
-%\end{prob}
+\begin{prob}
+Give an informal derivation of the relationship between the circumference and area of a circle. 
+\end{prob}
 
 \begin{prob}
 Given a figure and a rotation of that figure, find the center and angle of rotation.  
@@ -200,6 +215,23 @@ $(a,b)$ and $(0,b)$. Use algebra to prove that the diagonals have the
 same length.
 \end{prob}
 
+\begin{prob}
+Use a general (non-special) triangle to explain why every triangle is a rep-4-tile.  
+Use the same triangle to explain why every triangle tessellates the plane.  Then use your tessellation to explain why every triangle is a rep-$n^2$-tile for any positive integer $n$. 
+\end{prob}
+
+\begin{prob} 
+Concurrency of angle bisectors. 
+\begin{enumerate}
+\item For an arbitrary triangle, draw carefully to demonstrated that the angle bisectors of a triangle are concurrent at the incenter.   
+\item Prove that the angle bisectors of a triangle are concurrent.  (Hint:  You may use the result, proved in lecture, that the points on an angle bisector are exactly those that are equidistant from the sides of the angles.)  
+\end{enumerate}
+\end{prob} 
+
+\begin{prob}
+Explain how the ASA congruence criterion follows from the definition of congruence in terms of rigid motions. Be sure to indicate, using the two given angles and the included side, why the sequence of rigid motions guarantees triangle congruence.
+\end{prob}
+
 %Other review
 % * Multiplication is not necessarily scaling--unless it is dilation
 %
@@ -208,5 +240,3 @@ same length.
 % * Stacking cubic units covering the base. 
 
 
-
-\vfill
