Getting ready for printing
All 2016 issues noted as “fixnotes"

--- a/ParallelsInGeometry/teacherEd.sty
+++ b/ParallelsInGeometry/teacherEd.sty
@@ -582,12 +582,12 @@ skipabove=\baselineskip]{warning}%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\renewcommand{\thetable}{\arabic{table}}
-\def\billcomment#1{\footnote{#1}}
-\def\marginformat{\centering\footnotesize\sffamily}
-\let\realcite\cite
-\def\cite#1{}
-\def\hyperlink#1#2{#2}
+%\renewcommand{\thetable}{\arabic{table}}
+%\def\billcomment#1{\footnote{#1}}
+%\def\marginformat{\centering\footnotesize\sffamily}
+%\let\realcite\cite
+%\def\cite#1{}
+%\def\hyperlink#1#2{#2}
 \def\standardid#1{}
 \def\sectionid#1{}
 \def\anchor#1{}
@@ -600,12 +600,12 @@ skipabove=\baselineskip]{warning}%
 \def\letter#1{}
 \def\adv#1{}
 \def\mod#1{}
-%\def\text#1{\def\thetext{#1}} % clobbered text - hence moved
-
-
-\definecolor{light}{gray}{.75} 
-\definecolor{mcgray}{gray}{0.9}
-\definecolor{magenta}{rgb}{.451,.137,.11}
+%%\def\text#1{\def\thetext{#1}} % clobbered text - hence moved
+%
+%
+%\definecolor{light}{gray}{.75} 
+%\definecolor{mcgray}{gray}{0.9}
+%\definecolor{magenta}{rgb}{.451,.137,.11}
 
 % To move up comments, use the optional marginnote parameter [-3\baselineskip].  But this causes multiple notes to overwrite each other.  
 
