Student Edition sent to printing for Spring 2017

--- a/ParallelsInGeometry/ParallelsInGeometrySupplements.tex
+++ b/ParallelsInGeometry/ParallelsInGeometrySupplements.tex
@@ -63,9 +63,12 @@
 % scaling volume figures (problems are in Turn up the Volume.  Separate into a new activity.)
 % connecting the dots for parametric?  
 % 
+% Activities recently added or revised
+%
 %\input{../chapters/appendix/suitablePrecision}
 %\input{../chapters/appendix/circularTrig}
 %\input{../chapters/appendix/quadDiagonals2}  % replace other version
+%\input{../chapters/appendix/linesInTriangles}
 
 %  Unused activities
 
@@ -75,9 +78,8 @@
 %\input{../chapters/appendix/goldenRatio}
 %\input{../chapters/appendix/ruleTheDay}
 
-% Figures for Turn Up the Volume!  
 
-\input{../chapters/appendix/linesInTriangles}
+% Figures for Turn Up the Volume!  
 
 \newpage
 
