--- a/ParallelsInGeometry/teacherEd.sty
+++ b/ParallelsInGeometry/teacherEd.sty
@@ -107,7 +107,8 @@
 \renewcommand{\a}{\wedge}
 \renewcommand{\v}{\vee}
 \renewcommand{\l}{\ell}
-\newcommand{\mat}{\mathsf}
+%\newcommand{\mat}{\mathsf} 
+\newcommand{\mat}{\mathbf} 
 \renewcommand{\vec}{\mathbf}
 \renewcommand{\subset}{\subseteq}
 \renewcommand{\supset}{\supseteq}
