--- a/ParallelsInGeometry/ParallelsInGeometry.tex
+++ b/ParallelsInGeometry/ParallelsInGeometry.tex
@@ -3,6 +3,7 @@
 
 \documentclass[justified,openany,nofonts]{tufte-book}
 
+%\usepackage{citeref}
 \usepackage{teacherEd}
 
 \usepackage{framed}
@@ -10,13 +11,13 @@
 
 %\newenvironment{teachingnote}{\begin{framed}\begin{itshape}\begin{bfseries}\noindent Teaching Note:}{\end{bfseries}\end{itshape}\end{framed}}
 
-\newenvironment{teachingnote}{\begin{framed}\noindent \textbf{Teaching Note:}}{\end{framed}}
-\newcommand{\teachingnotes}{With Teaching Notes}
-%\excludecomment{teachingnote}
-%\newcommand{\teachingnotes}{}
+%\newenvironment{teachingnote}{\begin{framed}\noindent \textbf{Teaching Note:}}{\end{framed}}
+%\newcommand{\teachingnotes}{With Teaching Notes}
+\excludecomment{teachingnote}
+\newcommand{\teachingnotes}{}
 
-\def\fixnote#1{\begin{framed}{\color{red}Fixnote: #1}\end{framed}}  % Allows insertion of red notes about needed edits
-%\def\fixnote#1{}
+%\def\fixnote#1{\begin{framed}{\color{red}Fixnote: #1}\end{framed}}  % Allows insertion of red notes about needed edits
+\def\fixnote#1{}
 
 %%% This sets how the enumerate command works
 \renewcommand{\theenumi}{$(\mathrm{\arabic{enumi}})$}
@@ -70,7 +71,7 @@
 \input{../chapters/appendix/suitablePrecision}
 \input{../chapters/appendix/tiltedSquare}
 \input{../chapters/appendix/pythagorean}
-\input{../chapters/appendix/louieTri}
+%\input{../chapters/appendix/louieTri}
 %\input{../chapters/appendix/louieRegPoly}
 \input{../chapters/appendix/funkyShapes}
 \input{../chapters/appendix/trapezoidArea}
@@ -78,10 +79,11 @@
 % Constructions
 \input{../chapters/appendix/triangleInvestigation}
 \input{../chapters/appendix/unMessUpable}
+\input{../chapters/appendix/triangleCenters}
+\input{../chapters/appendix/linesInTriangles}
 \input{../chapters/appendix/isoscelesBisectors}
 \input{../chapters/appendix/aboutMedians}
 
-\input{../chapters/appendix/triangleCenters}
 %\input{../chapters/appendix/eulerLine}
 %\input{../chapters/appendix/apothem}
 \input{../chapters/appendix/verify}
