--- a/ParallelsInGeometry/teacherEd.sty
+++ b/ParallelsInGeometry/teacherEd.sty
@@ -108,7 +108,8 @@
 \renewcommand{\v}{\vee}
 \renewcommand{\l}{\ell}
 %\newcommand{\mat}{\mathsf} 
-\newcommand{\mat}{\mathbf} 
+%\newcommand{\mat}{\mathit}
+\newcommand{\mat}{\boldsymbol} 
 \renewcommand{\vec}{\mathbf}
 \renewcommand{\subset}{\subseteq}
 \renewcommand{\supset}{\supseteq}
