End of semester, Spring 2017

--- a/ParallelsInGeometry/1166-SupplementalProblems.tex
+++ b/ParallelsInGeometry/1166-SupplementalProblems.tex
@@ -1,9 +1,9 @@
 \newpage
 
-\section{Math 1166: Final Exam Review, 2016}
+\section{Math 1166: Final Exam Review, Draft 2017}
 
 Note:  The final exam is cumulative, so be sure to include the \textbf{previous midterm review documents} as part of your review.  
-Since the second midterm, we have covered Sections 5.3, 5.4 (except 5.4.3 and 5.4.4), 6.1 and 6.2 from your notes as well as Activities A.36 -- A.48, except A.46.  Below is a summary of that content.  
+Since the second midterm, we have covered Sections 5.3, 5.4 (except 5.4.4), 6.1 and 6.2 from your notes as well as Activities A.36 -- A.48, except A.46.  Below is a summary of that content.  
 
 % A.40.Reading Information from a Graph
 % A.41. Parametric Equations
@@ -269,6 +269,11 @@ Given an equation of a line in standard form, $ax+by=c$:
 \item Find an efficient way to write down an equation of a perpendicular line through the point $(p,q)$.  
 \item Explain why efficient the method works. 
 \end{enumerate}
+\end{prob}
+
+\begin{prob}
+Using the picture below, prove that if two non-vertical lines are perpendicular, the product of their slopes is $-1$.   You may assume that $x$ and $y$ are horizontal and vertical axes, respectively; that lines $j$ and $k$ are perpendicular and that $j$ has positive slope; that the segments of length $a$ and $c$ are vertical and collinear; and that the segment of length $b$ is horizontal.   
+$$\includegraphics[width=2.5in]{../graphics/perpendicularSlopes.pdf}$$
 \end{prob}
 
 %\subsection*{Questions to be added}
