--- a/ParallelsInGeometry/1166-midterm2.tex
+++ b/ParallelsInGeometry/1166-midterm2.tex
@@ -54,9 +54,40 @@ David proudly owns a 42 inch (measured diagonally) flat screen
 \end{prob}
 
 \begin{prob}
+Right triangle trigonometry.  
+\begin{enumerate}
+\item Suppose $\alpha$ is in the second quadrant and $\sin\alpha = 3/4$.  Find $\cos\alpha$ and $\tan\alpha$.
+\item Suppose $\beta$ is in the third quadrant and $\cos\beta = -2/3$.  Find $\sin\beta$ and $\tan\beta$.
+\item Suppose $\gamma$ is in the fourth quadrant and $\tan\gamma = -2/3$.  Find $\sin\gamma$ and $\cos\gamma$.
+\end{enumerate}
+\end{prob}
+
+\begin{prob}
+Some drugs work best when dosages are proportional to body surface area.  Other drugs work best when dosages are proportional to blood volume.  A typical adult male (5 ft 10 in, 175 lbs)  has a body surface area of about 2 square meters and about 5 liters of blood.  Scale these values up to estimate LeBron's body surface area and blood volume.  
+\end{prob}
+
+%\item LeBron James wears size 16 shoe.  Bart says a 5 ft 10 in version of LeBron would have a foot 7/8 as long.  Does this make sense?  Explain why or why not.  If not, give a better estimate.  
+%\answer{This is fine because foot length is proportional to height.}
+%\item Bart says that the scaled-down LeBron would wear size 14 shoe because 14 is 7/8 of 16.  Does this make sense?  Explain why or why not.  If not, give a better estimate of the scaled version's shoe size.  
+%\answer{This is wrong because shoe size is not proportional to foot length.  Somehow suggest that students use Internet data to create a linear function relating foot length to shoe size, and they should get a result close to size 10, which is more sensible.} 
+
+\begin{prob}
+Consider a version of LeBron that is $d$ times as tall.  How would following quantities compare between the scaled version and the real LeBron:   leather in the sole of a shoe, shoe size, inseam, fabric in a T-shirt, lung capacity, neck circumference, and hat size.\footnote{Cool fact:  The size of a hat is the diameter (in inches) of the hat when it is reshaped into a circle.  Most adults have hat sizes between $6\frac{3}{4}$ and $8$.}  Explain briefly.  
+%\answer{\begin{itemize}
+%\item Inseam and neck circumference are lengths, so they will be $d$ times as big.  
+%\item Hat size is proportional to head circumference, which is a length, so it also scales as $d$.  
+%\item Shoe size is not really a length.  It varies with foot length but is not proportional to actual length measurements.  There is a non-proportional linear relationship.  
+%\item Leather in the sole of the shoe and fabric in the T-shirt are both about area because their thicknesses stay constant.  They scale as $d^2$.  
+%\item Lung capacity is about volume, so it scales as $d^3$.
+%\end{itemize}
+%}  
+\end{prob}
+
+
+\begin{prob}
 A typical adult male gorilla is about 5.5 feet tall and weighs about 400 pounds. Suppose King Kong was about 22 feet tall and proportioned like a typical adult male gorilla.
 \begin{enumerate}
-\item Write an expression that approximates King Kong's weight. Briefly explain your reasoning.
+\item Approximates King Kong's weight. Briefly explain your reasoning.
 \item The circumference of the neck of a typical adult male gorilla is 36 inches. Approximately what would be the circumference of King Kong's neck? Briefly explain your reasoning.
 \item Suppose an Ohio State sweatshirt for a typical adult male gorilla requires 3 square yards of fabric.  Approximately how much fabric would be required for an Ohio State sweatshirt for King Kong?  Briefly explain your reasoning.
 \end{enumerate}
@@ -223,14 +254,14 @@ Use the same triangle to explain why every triangle tessellates the plane.  Then
 \begin{prob} 
 Concurrency of angle bisectors. 
 \begin{enumerate}
-\item For an arbitrary triangle, draw carefully to demonstrated that the angle bisectors of a triangle are concurrent at the incenter.   
+\item For an arbitrary triangle, draw carefully to demonstrate that the angle bisectors of a triangle are concurrent at the incenter.   
 \item Prove that the angle bisectors of a triangle are concurrent.  (Hint:  You may use the result, proved in lecture, that the points on an angle bisector are exactly those that are equidistant from the sides of the angles.)  
 \end{enumerate}
 \end{prob} 
 
-\begin{prob}
-Explain how the ASA congruence criterion follows from the definition of congruence in terms of rigid motions. Be sure to indicate, using the two given angles and the included side, why the sequence of rigid motions guarantees triangle congruence.
-\end{prob}
+%\begin{prob}
+%Explain how the ASA congruence criterion follows from the definition of congruence in terms of rigid motions. Be sure to indicate, using the two given angles and the included side, why the sequence of rigid motions guarantees triangle congruence.
+%\end{prob}
 
 %Other review
 % * Multiplication is not necessarily scaling--unless it is dilation
