--- a/ParallelsInGeometry/4407-exam.tex
+++ b/ParallelsInGeometry/4407-exam.tex
@@ -55,10 +55,10 @@ Describe Euclid's (compass and straightedge) construction for an equilateral tri
 why it works.
 \end{prob}
 
-\begin{prob}
-Use the picture below to show that a pair of medians intersects at a point 2/3 of the way from the vertex to the opposite side.  Then use that fact to argue that the three medians must be concurrent.  
-$$\includegraphics[width=2.5in]{../graphics/median1.pdf}$$
-\end{prob}
+%\begin{prob}
+%Use the picture below to show that a pair of medians intersects at a point 2/3 of the way from the vertex to the opposite side.  Then use that fact to argue that the three medians must be concurrent.  
+%$$\includegraphics[width=2.5in]{../graphics/median1.pdf}$$
+%\end{prob}
 
 \begin{prob}
 Prove that the points on an angle bisector are \emph{exactly those} that are equidistant from the sides of the angle. 
@@ -154,15 +154,15 @@ Explain how the picture ``proves'' the following statements:
 %\end{enumerate}
 %\end{prob}
 
-
-\begin{prob}
-During a solar eclipse we see that the apparent diameter of the Sun and Moon are nearly equal. If the Moon is around 240,000 miles from Earth, the Moon's diameter is about 2000 miles, and the Sun's diameter is about 865,000 miles how far is the Sun from the Earth?
-\begin{enumerate}
-\item Draw a relevant (and helpful) picture showing the important points of this problem.
-\item Write an expression that gives the solution to this problem---show all work.
-\end{enumerate}
-\end{prob}
-
+%
+%\begin{prob}
+%During a solar eclipse we see that the apparent diameter of the Sun and Moon are nearly equal. If the Moon is around 240,000 miles from Earth, the Moon's diameter is about 2000 miles, and the Sun's diameter is about 865,000 miles how far is the Sun from the Earth?
+%\begin{enumerate}
+%\item Draw a relevant (and helpful) picture showing the important points of this problem.
+%\item Write an expression that gives the solution to this problem---show all work.
+%\end{enumerate}
+%\end{prob}
+%
 %\begin{prob}
 %David proudly owns a 42 inch (measured diagonally) flat screen
 %  TV. Michael proudly owns a 13 inch (measured diagonally) flat screen
@@ -206,25 +206,25 @@ Explain how the following picture ``proves'' the Pythagorean Theorem.
 \]
 \end{prob}
 
-\begin{prob}
-Here is a right triangle, note it is \textbf{not} drawn to scale:
-\[
-\includegraphics{../graphics/origamiSimQ.pdf}
-\]
-Solve for all unknowns in the following cases.
-\begin{enumerate}
-\item $a = 3$, $b = ?$, $c = ?$, $d = 12$, $e = 5$, $f = ?$
-\item $a = ?$, $b = 3$, $c = ?$, $d =8$, $e = 13$, $f = ?$
-\item $a = 7$, $b = 4$, $c = ?$, $d =?$, $e = 11$, $f = ?$
-\item $a = 5$, $b = 2$, $c = ?$, $d =6$, $e = ?$, $f = ?$
-\end{enumerate}
-In each case explain your reasoning.
-\end{prob}
+%\begin{prob}
+%Here is a right triangle, note it is \textbf{not} drawn to scale:
+%\[
+%\includegraphics{../graphics/origamiSimQ.pdf}
+%\]
+%Solve for all unknowns in the following cases.
+%\begin{enumerate}
+%\item $a = 3$, $b = ?$, $c = ?$, $d = 12$, $e = 5$, $f = ?$
+%\item $a = ?$, $b = 3$, $c = ?$, $d =8$, $e = 13$, $f = ?$
+%\item $a = 7$, $b = 4$, $c = ?$, $d =?$, $e = 11$, $f = ?$
+%\item $a = 5$, $b = 2$, $c = ?$, $d =6$, $e = ?$, $f = ?$
+%\end{enumerate}
+%In each case explain your reasoning.
+%\end{prob}
 
-\begin{prob}
-Describe a general (and foolproof) way of demonstrating that any two parabolas are similar.
-\end{prob}
-
+%\begin{prob}
+%Describe a general (and foolproof) way of demonstrating that any two parabolas are similar.
+%\end{prob}
+%
 %\begin{prob}
 %Construct a tangent line from a point outside a given circle to the circle.
 %\end{prob}
@@ -297,14 +297,14 @@ If the surface area of a rectangular prism is 20 square feet, what is the most o
 %\begin{prob}
 %In track and field, 1600 meters is often called the ``one mile,'' but this is not exactly correct.  Is 1600 meters longer or shorter than one mile?  By how much?  
 %\end{prob}
-
-\begin{prob}
-Felicia and Wesley are neighbors.  The common boundary between their properties consists of two line segments, as shown below.  
-$$\includegraphics[scale=0.38]{../graphics/TIMSS}$$
-They would prefer their common boundary to be a single straight segment.  How might they change their boundary so that they 
-each have the same area as they have now?  
-\end{prob}
-
+%
+%\begin{prob}
+%Felicia and Wesley are neighbors.  The common boundary between their properties consists of two line segments, as shown below.  
+%$$\includegraphics[scale=0.38]{../graphics/TIMSS}$$
+%They would prefer their common boundary to be a single straight segment.  How might they change their boundary so that they 
+%each have the same area as they have now?  
+%\end{prob}
+%
 %\begin{prob}
 %Write an equation of the line through $(2,4)$ parallel to $5x-3y=1$.  
 %Now write an equation of the line through $(x_1,y_1)$ parallel to $ax+by=c$. 
@@ -375,19 +375,19 @@ A bug moves according to the following parametric equations, where t is measured
 \end{enumerate}
 \end{prob}
 
-%\subsection{Absolute Value, Distance, and City Geometry}
-\begin{prob}
-Consider the following equations:  
-\setlength{\arraycolsep}{12pt}
-\setlength{\extrarowheight}{3pt}
-\[
-\begin{array}{cccc}
-x^2-y^2=0    &   x^2=y^2   &   |y|=|x|   &   y= \pm x \\
-(x-y)(x+y)=0  &   x= \pm y   &   y = \pm|x|   & x = \pm|y|
-\end{array}
-\]
-\begin{enumerate}
-\item Which equations are equivalent to which other equations?  Say how you know.  (Be sure to state what it means for the equations to be equivalent.)
-\item For each set of equivalent equations, graph the solution set, and describe how each of the equations provides a different way about thinking about that solution set.  
-\end{enumerate}
-\end{prob}
+%%\subsection{Absolute Value, Distance, and City Geometry}
+%\begin{prob}
+%Consider the following equations:  
+%\setlength{\arraycolsep}{12pt}
+%\setlength{\extrarowheight}{3pt}
+%\[
+%\begin{array}{cccc}
+%x^2-y^2=0    &   x^2=y^2   &   |y|=|x|   &   y= \pm x \\
+%(x-y)(x+y)=0  &   x= \pm y   &   y = \pm|x|   & x = \pm|y|
+%\end{array}
+%\]
+%\begin{enumerate}
+%\item Which equations are equivalent to which other equations?  Say how you know.  (Be sure to state what it means for the equations to be equivalent.)
+%\item For each set of equivalent equations, graph the solution set, and describe how each of the equations provides a different way about thinking about that solution set.  
+%\end{enumerate}
+%\end{prob}
