--- a/ParallelsInGeometry/ParallelsInGeometrySupplements.tex
+++ b/ParallelsInGeometry/ParallelsInGeometrySupplements.tex
@@ -70,6 +70,8 @@
 %\input{../chapters/appendix/quadDiagonals2}  % replace other version
 %\input{../chapters/appendix/linesInTriangles}
 
+\input{../chapters/appendix/constructibleNumbers2}
+
 %  Unused activities
 
 %\input{../chapters/appendix/louieRegPoly}
