As sent to printing, January 2018

--- a/ParallelsInGeometry/ParallelsInGeometry.tex
+++ b/ParallelsInGeometry/ParallelsInGeometry.tex
@@ -25,7 +25,7 @@
 
 \title{Parallels \\ in Geometry}
 \author{\teachingnotes}
-\publisher{Math 1166:  Spring 2017 \\ This document was typeset on \today.}
+\publisher{Math 1166:  Spring 2018 \\ This document was typeset on \today.}
 %\date{}
 
 
@@ -55,7 +55,7 @@
 
 \input{../chapters/city}
 
-\input{../chapters/isometries}
+%\input{../chapters/isometries}
 
 \appendix
 
@@ -138,10 +138,10 @@
 \input{../chapters/appendix/cityPara}
 
 % Matrices as transformations
-\input{../chapters/appendix/inverseMapping}
-\input{../chapters/appendix/linesAndParallel}
+%\input{../chapters/appendix/inverseMapping}
+%\input{../chapters/appendix/linesAndParallel}
 % \input{../chapters/appendix/center}   % Subs at Sea.  Center of an element of a group
-\input{../chapters/appendix/composingTransformations}  % using matrices
+%\input{../chapters/appendix/composingTransformations}  % using matrices
 %\input{../chapters/appendix/goldenRatio}
 
 
